--- a/config/settings.yaml
+++ b/config/settings.yaml
@@ -4,3 +4,13 @@ postgres:
   dbname: test
   user: test
   password: test
+uni_dataset:
+  path: data/raw/uczelnie_data_set.xlsx
+oracle:
+  host: localhost
+  port: 1521
+  service_name: xe
+  user: hurtownia
+  password: admin
+instant_client:
+  path: C:\oraclexe\instantclient_23_7
