--- a/config/settings.yaml
+++ b/config/settings.yaml
@@ -1,9 +1,9 @@
 postgres:
   host: localhost
   port: 5432
-  dbname: test
-  user: test
-  password: test
+  dbname: postgres
+  user: postgres
+  password: qwerty
 uni_dataset:
   path: data/raw/uczelnie_data_set.xlsx
 oracle:
