--- a/config/settings.yaml
+++ b/config/settings.yaml
@@ -10,7 +10,7 @@ oracle:
   host: localhost
   port: 1521
   service_name: xe
-  user: system
-  password: oracle
+  user: hurtownia
+  password: admin
 instant_client:
-  path: C:\oraclexe\instantclient_23_7
+  path: C:\oracle\instantclient_23_7
